Enhance project structure and configuration
- Updated `.npmrc` to include hoisting settings for better dependency management.
- Modified `nx.json` to remove `nxCloudId` and added new target defaults for Angular libraries and components.
- Refactored `package.json` to streamline dependencies and added new dev dependencies for NestJS and Webpack.
- Introduced `pnpm-workspace.yaml` to define workspace structure for apps and libraries.
- Enhanced `README.md` with project overview, key features, and updated structure.
- Added TypeScript configuration for new API Gateway application and shared libraries.
- Created initial setup for `api-gateway` and `shared` libraries, including controllers, services, and tests.
- Implemented ESLint and Jest configurations for new applications and libraries.

This commit lays the groundwork for a modular and scalable school management application using Nx and NestJS.

--- a/nx.json
+++ b/nx.json
@@ -14,7 +14,6 @@
     ],
     "sharedGlobals": ["{workspaceRoot}/.github/workflows/ci.yml"]
   },
-  "nxCloudId": "6789a932986957783843893b",
   "targetDefaults": {
     "@angular-devkit/build-angular:browser": {
       "cache": true,
@@ -50,6 +49,29 @@
       "linter": "eslint",
       "style": "css",
       "unitTestRunner": "jest"
+    },
+    "@nx/angular:library": {
+      "linter": "eslint",
+      "unitTestRunner": "jest"
+    },
+    "@nx/angular:component": {
+      "style": "css"
     }
-  }
+  },
+  "plugins": [
+    {
+      "plugin": "@nx/webpack/plugin",
+      "options": {
+        "buildTargetName": "build",
+        "serveTargetName": "serve",
+        "previewTargetName": "preview"
+      }
+    },
+    {
+      "plugin": "@nx/eslint/plugin",
+      "options": {
+        "targetName": "eslint:lint"
+      }
+    }
+  ]
 }
