--- a/package.json
+++ b/package.json
@@ -2,20 +2,10 @@
   "name": "@school-nest/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~19.0.0",
-    "@angular/common": "~19.0.0",
-    "@angular/compiler": "~19.0.0",
-    "@angular/core": "~19.0.0",
-    "@angular/forms": "~19.0.0",
-    "@angular/platform-browser": "~19.0.0",
-    "@angular/platform-browser-dynamic": "~19.0.0",
-    "@angular/router": "~19.0.0",
-    "rxjs": "~7.8.0",
-    "zone.js": "~0.15.0"
+  "scripts": {
+    "prepare": "husky"
   },
+  "private": true,
   "devDependencies": {
     "@angular-devkit/build-angular": "~19.0.0",
     "@angular-devkit/core": "~19.0.0",
@@ -24,12 +14,17 @@
     "@angular/compiler-cli": "~19.0.0",
     "@angular/language-service": "~19.0.0",
     "@eslint/js": "^9.8.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@nx/angular": "20.3.1",
     "@nx/eslint": "20.3.1",
     "@nx/eslint-plugin": "20.3.1",
     "@nx/jest": "20.3.1",
     "@nx/js": "20.3.1",
+    "@nx/nest": "20.3.1",
+    "@nx/node": "20.3.1",
     "@nx/web": "20.3.1",
+    "@nx/webpack": "20.3.1",
     "@nx/workspace": "20.3.1",
     "@schematics/angular": "~19.0.0",
     "@swc-node/register": "~1.9.1",
@@ -41,8 +36,10 @@
     "angular-eslint": "^19.0.2",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^9.0.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.4.0",
     "nx": "20.3.1",
     "prettier": "^2.6.2",
@@ -50,6 +47,23 @@
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.6.2",
-    "typescript-eslint": "^8.13.0"
+    "typescript-eslint": "^8.13.0",
+    "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "@angular/animations": "~19.0.0",
+    "@angular/common": "~19.0.0",
+    "@angular/compiler": "~19.0.0",
+    "@angular/core": "~19.0.0",
+    "@angular/forms": "~19.0.0",
+    "@angular/platform-browser": "~19.0.0",
+    "@angular/platform-browser-dynamic": "~19.0.0",
+    "@angular/router": "~19.0.0",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
+    "zone.js": "~0.15.0"
   }
 }
