Update Docker configuration and enhance api-gateway setup
- Added Dockerfile for the api-gateway application to streamline the build and deployment process.
- Updated .dockerignore to include additional files and directories to be excluded from Docker builds.
- Modified package.json for the api-gateway to include tslib as a dependency.
- Enhanced tsconfig.json in the common library to enable composite projects for better TypeScript support.

These changes improve the development workflow and ensure a cleaner Docker image for the api-gateway service.

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,40 @@
-**/node_modules
+# Dependencies
 node_modules
-.angular
+.pnpm-store
+
+# Build outputs
 dist
+tmp
+out-tsc
+
+# NX
+.nx/cache
+
+# Git
+.git
+.gitignore
+
+# IDE
+.idea
+.vscode
+*.swp
+*.swo
+
+# Logs
+logs
+*.log
+npm-debug.log*
+pnpm-debug.log*
+
+# Environment
+.env
+.env.*
+!.env.example
+
+# Testing
+coverage
+.nyc_output
+
+# System Files
+.DS_Store
+Thumbs.db
