--- a/apps/api-gateway/package.json
+++ b/apps/api-gateway/package.json
@@ -7,6 +7,7 @@
     "@nestjs/platform-express": "^10.0.2",
     "axios": "^1.6.0",
     "reflect-metadata": "^0.1.13",
+    "tslib": "^2.3.0",
     "rxjs": "^7.8.0"
   }
 }
