Update CI workflow to use recursive pnpm install command
- Modified the CI configuration to change the pnpm install command from `pnpm install --frozen-lockfile` to `pnpm install -r --frozen-lockfile`, ensuring that all workspace packages are installed correctly while maintaining the lockfile integrity.

This change enhances the CI process by ensuring that all dependencies across the workspace are properly resolved.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Disable Nx Cloud in CI
         run: echo "NX_CLOUD_DISTRIBUTED_EXECUTION=false" >> $GITHUB_ENV
 
-      - run: pnpm install --frozen-lockfile
+      - run: pnpm install -r --frozen-lockfile
       - uses: nrwl/nx-set-shas@v4
 
       # Prepend any command with "nx-cloud record --" to record its logs to Nx Cloud
